erfactor: update API
